--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "~8.2.8",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "moment": "^2.24.0",
+    "ngx-moment": "^3.4.0",
     "rxjs": "~6.5.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
